--- a/.gitignore
+++ b/.gitignore
@@ -135,7 +135,38 @@ pytest.ini
 
 update_params.sh
 node_modules/
+**/node_modules/
 *.zip
 lambda-function/node_modules/
 embedding.json
 node_modules/
+
+# Build outputs
+**/dist/
+**/build/
+public/chat-bundle.js
+
+# Environment files
+.env.local
+.env.*.local
+
+# IDE/Editor
+.idea/
+*.swp
+*.swo
+
+# OS files
+Thumbs.db
+
+# Deployment artifacts
+get-pinecone-config.zip
+function.zip
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Cache
+.cache/
+.npm/
