--- a/lambda-deploy/package.json
+++ b/lambda-deploy/package.json
@@ -1,8 +1,10 @@
 {
   "name": "bmore-maternal-chat",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
-    "@aws-sdk/client-ssm": "^3.0.0",
-    "node-fetch": "^2.6.1"
+    "@aws-sdk/client-ssm": "^3.0.0"
   }
 }
