--- a/lambda-deploy/package.json
+++ b/lambda-deploy/package.json
@@ -5,6 +5,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "@aws-sdk/client-ssm": "^3.0.0"
+    "@aws-sdk/client-ssm": "^3.0.0",
+    "node-fetch": "^2.6.1"
   }
 }
