refactor: simplify lambda handler and add test script

--- a/lambda-deploy/package.json
+++ b/lambda-deploy/package.json
@@ -7,5 +7,9 @@
   "dependencies": {
     "@aws-sdk/client-ssm": "^3.750.0",
     "node-fetch": "^2.7.0"
+  },
+  "scripts": {
+    "test": "node test/test-api.js",
+    "test:make": "node test/test-make-integration.js"
   }
 }
